# Mantle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  research.md
CMake_Modules/: generate_product_version.cmake
ImHex Patterns/: rttibin.hexpat
ImHex_Patterns/: rtti_string.hexpat  rtti_texture.hexpat  rttibin.hexpat
ImHex_Patterns/file_specific/: rtti_characters.hexpat  rtti_texture_hgh_grenadier.hexpat  rtti_texture_loading_picture_1.hexpat  rtti_weapons.hexpat  weapons.hexpat
gfx/: product.icns  untitled.blend
include/: defs.hpp  gl.hpp  resource.hpp  ui.hpp
include/core/: core_file.hpp  core_texture_extractor_beta.hpp
include/core/rtti_types/: string.hpp  texture.hpp
include/rendering/: gl_tools.hpp  render.hpp
src/: main.cpp
src/core/: core_read.cpp  core_texture_extractor_beta.cpp  header.cpp
src/core/types/: core_texture_read.cpp
src/rendering/: gl_tools.cpp  render.cpp  ui.cpp
src/resources/: Icon.cpp
src/ui/: interface.cpp
src/ui/pages/: texture_tools.cpp
